--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,15 @@
 {
-    "name": "league/:package_name",
-    "description": ":package_description",
+    "name": "jwilkinson/collections",
+    "description": "A package providing a wide variety of standard interfaces and datastructures",
     "keywords": [
-        "league",
-        ":package_name"
+        "collection",
+        "datastructure"
     ],
-    "homepage": "https://github.com/thephpleague/:package_name",
+    "homepage": "https://github.com/john-wilkinson/collections",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": ":author_website",
+            "name": "John Wilkinson",
             "role": "Developer"
         }
     ],
@@ -19,17 +17,16 @@
         "php" : ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1"
+        "phpunit/phpunit" : "4.*"
     },
     "autoload": {
         "psr-4": {
-            "League\\Skeleton\\": "src"
+            "Jmw\\Collection\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\Skeleton\\Test\\": "tests"
+            "Jmw\\Collection\\Test\\": "tests"
         }
     },
     "scripts": {
